# python-staticflow

./: README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
staticflow/: __init__.py
tests/: test_basic.py
